fixed layout again

--- a/index.html
+++ b/index.html
@@ -6,31 +6,31 @@
 		<title></title>
 	</head>
 	<body>
-		<header class="main-header">
+		<header class="index-main-header">
 			Elliot Higgs
 		</header>
 			<ul class="menu">
-				<li class="menu-i"><a href="index.html">
-					<span class="menu-text">Index</span>
+				<li><a href="index.html">
+					<span class="menu-text">Home</span>
 				</a>
 			</li>
-			<li class="menu-i"><a href="bio.html">
+			<li><a href="bio.html">
 				<span class="menu-text">Bio</span>
 			</a>
 		</li>
-		<li class="menu-i"><a href="contact.html">
+		<li><a href="contact.html">
 			<span class="menu-text">Contact</span>
 		</a>
 	</li>
-	<li class="menu-i"><a href="cv.html">
+	<li><a href="cv.html">
 		<span class="menu-text">CV</span>
 	</a>
 </li>
 </ul>
-<main class="main">
+<main class="index-main">
 MAIN
 </main>
-<footer class="footer">
+<footer class="index-footer">
 This is my footer
 </footer>
 </body>
