--- a/contact.html
+++ b/contact.html
@@ -30,9 +30,9 @@
 <main class="contact-main">
 <form action="">
 	<section class="email-text">Email</section>
-	<section class="email-input-text"><input class="get-email" type="text"></section>
+	<section class="email-input-text"><input class="get-email" maxlength="500" type="text"></section>
 	<section class="email-content">Content</section>
-	<section class=email-content-input><input class="email-box" id="email" type="text"></section>
+	<section class=email-content-input><input class="email-box" maxlength="500" type="text"></section>
 	<section class="email-send"><input type="submit" value="Send"></section>
 </form>
 </main>
