Major Layout Change

--- a/index.html
+++ b/index.html
@@ -12,41 +12,40 @@
             Elliot Higgs
         </header>
         <nav class="menu">
-        <ul class="nav">
-            <li class="index-link">
-                <a href="index.html">
-                    <span class="menu-text">Home</span>
-                </a>
-            </li>
-            <li class="bio-link">
-                <a href="bio.html">
-                    <span class="menu-text">Bio</span>
-                </a>
-            </li>
-            <li class="contact-link">
-                <a href="contact.html">
-                    <span class="menu-text">Contact</span>
-                </a>
-            </li>
-            <li class="cv-link">
-                <a href="cv.html">
-                    <span class="menu-text">CV</span>
-                </a>
-            </li>
-        </ul>
+            <ul class="nav">
+                <li class="index-link">
+                    <a href="index.html">
+                        <span class="menu-text">Home</span>
+                    </a>
+                </li>
+                <li class="bio-link">
+                    <a href="bio.html">
+                        <span class="menu-text">Bio</span>
+                    </a>
+                </li>
+                <li class="contact-link">
+                    <a href="contact.html">
+                        <span class="menu-text">Contact</span>
+                    </a>
+                </li>
+                <li class="cv-link">
+                    <a href="cv.html">
+                        <span class="menu-text">CV</span>
+                    </a>
+                </li>
+            </ul>
         </nav>
         <div class="index-main-container">
-        <main class="index-main">
-            <section class="MainTest">Picture will go here soon(tm)</section>
-        </main>
+            <main class="index-main">
+                <section class="MainTest">Picture will go here soon(tm)</section>
+            </main>
         </div>
         <div class="index-footer-container">
-        <footer class="footer">
-            <section class="footer-content">
-            	Sometimes i post things on <a href="https://twitter.com/H1ggsyx">Twitter</a> 
-            	I stream once a year on <a href="https://www.twitch.tv/h1ggsy">Twitch</a>
-            </section>
-        </footer>  	
+            <footer class="footer">
+                <section class="footer-content">
+                    Sometimes i post things on <a href="https://twitter.com/H1ggsyx">Twitter</a> I stream once a year on <a href="https://www.twitch.tv/h1ggsy">Twitch</a>
+                </section>
+            </footer>
         </div>
     </body>
 
