Navigation Bar Changed

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="index-footer-container">
             <footer class="footer">
                 <section class="footer-content">
-                    Sometimes i post things on <a href="https://twitter.com/H1ggsyx">Twitter</a> I stream once a year on <a href="https://www.twitch.tv/h1ggsy">Twitch</a>
+                    Sometimes i post things on <a href="https://twitter.com/H1ggsyx">Twitter</a> and I stream once a year on <a href="https://www.twitch.tv/h1ggsy">Twitch</a>
                 </section>
             </footer>
         </div>
