--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <section class="MainTest">Picture will go here soon(tm)</section>
             </main>
         </div>
-        <div class="index-footer-container">
+        <div class="footer-container">
             <footer class="footer">
                 <section class="footer-content">
                     Sometimes i post things on <a href="https://twitter.com/H1ggsyx">Twitter</a> and I stream once a year on <a href="https://www.twitch.tv/h1ggsy">Twitch</a>
