Fixed Form Text & Changed Bio and CV Over To New Page Layout

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <header class="index-main-header">
+        <header class="main-header">
             Elliot Higgs
         </header>
         <nav class="menu">
