--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <header class="index-main-header">
+        <header class="main-header">
             Elliot Higgs
         </header>
         <nav class="menu">
@@ -45,7 +45,7 @@
                             <input placeholder="Your Email Address" type="text" required maxlength="32">
                         </fieldset>
                         <fieldset>
-                            <textarea placeholder="Type Your Message Here" required> </textarea>
+                            <textarea placeholder="Type Your Message Here" required></textarea>
                         </fieldset>
                         <fieldset>
                             <button name="submit-email" type="submit" id="submitbutton">Submit</button>
