Added Font Awesome Icons and Updated Footer to Add Icons

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="css/styles.css">
         <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+        <link rel="stylesheet" href="css/font-awesome.min.css">
         <title>Contact Page</title>
     </head>
 
@@ -55,10 +56,21 @@
             </main>
         </div>
         <div class="footer-container">
-            <footer class="footer">
-                <section class="footer-content">
-                    Sometimes i post things on <a href="https://twitter.com/H1ggsyx">Twitter</a> and I stream once a year on <a href="https://www.twitch.tv/h1ggsy">Twitch</a>
-                </section>
+            <footer class="footer-content">
+                <ul class="footer-list">
+                    <li class="footer-item">
+                        <a href="https://www.twitch.tv/h1ggsy">
+                            <span id="footer-item" class="fa fa-twitch fa-3x" aria-hidden="true"></span>
+                        </a>
+                        <li class="footer-item">
+                            <a href="https://twitter.com/H1ggsyx">
+                                <span id="footer-item" class="fa fa-twitter fa-3x" aria-hidden="true"></span>
+                            </a>
+                            <li class="footer-item">
+                                <a href="https://www.facebook.com/HiggsEll">
+                                    <span id="footer-item" class="fa fa-facebook fa-3x" aria-hidden="true"></span>
+                                </a>
+                </ul>
             </footer>
         </div>
     </body>
