Added Github Icon to Footer

--- a/cv.html
+++ b/cv.html
@@ -56,6 +56,10 @@
                                 <a href="https://www.facebook.com/HiggsEll">
                                     <span id="footer-item" class="fa fa-facebook fa-3x" aria-hidden="true"></span>
                                 </a>
+                                <li class="footer-item">
+                                    <a href="https://github.com/EllH/">
+                                        <span id="footer-item" class="fa fa-github fa-3x" aria-hidden="true"></span>
+                                    </a>
                 </ul>
             </footer>
         </div>
