--- a/index.html
+++ b/index.html
@@ -1,68 +1,70 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-        <link rel="stylesheet" href="css/styles.css">
-        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-        <link rel="stylesheet" href="css/font-awesome.min.css">
-        <title></title>
-    </head>
+<head>
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">//Google font api used to be able to use the font Lato
+    <link rel="stylesheet" href="css/font-awesome.min.css"> //Used to make the favicon icon appear - from http://www.favicon-generator.org/
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"> //Used to make the favicon icon appear - from http://www.favicon-generator.org/
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <title>Homepage</title>
+</head>
 
-    <body>
-        <header class="main-header">
-            Elliot Higgs
-        </header>
-        <nav class="menu">
-            <ul class="nav">
-                <li class="index-link">
-                    <a href="index.html">
-                        <span class="menu-text">Home</span>
+<body>
+    <header class="main-header">
+        Elliot Higgs
+    </header>
+    <nav class="menu">
+        <ul class="nav">
+            <li class="index-link">
+                <a href="index.html">
+                    <span class="menu-text">Home</span>
+                </a>
+            </li>
+            <li class="bio-link">
+                <a href="bio.html">
+                    <span class="menu-text">Bio</span>
+                </a>
+            </li>
+            <li class="contact-link">
+                <a href="contact.html">
+                    <span class="menu-text">Contact</span>
+                </a>
+            </li>
+            <li class="cv-link">
+                <a href="cv.html">
+                    <span class="menu-text">CV</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+    <div class="index-main-container">
+        <main class="index-main">
+            <section class="MainTest">Picture will go here soon(tm)</section>
+        </main>
+    </div>
+    <div class="footer-container">
+        <footer class="footer-content">
+            <ul class="footer-list">
+                <li class="footer-item">
+                    <a href="https://www.twitch.tv/h1ggsy">
+                        <span id="footer-item" class="fa fa-twitch fa-3x" aria-hidden="true"></span>
                     </a>
-                </li>
-                <li class="bio-link">
-                    <a href="bio.html">
-                        <span class="menu-text">Bio</span>
-                    </a>
-                </li>
-                <li class="contact-link">
-                    <a href="contact.html">
-                        <span class="menu-text">Contact</span>
-                    </a>
-                </li>
-                <li class="cv-link">
-                    <a href="cv.html">
-                        <span class="menu-text">CV</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-        <div class="index-main-container">
-            <main class="index-main">
-                <section class="MainTest">Picture will go here soon(tm)</section>
-            </main>
-        </div>
-        <div class="footer-container">
-            <footer class="footer-content">
-                <ul class="footer-list">
                     <li class="footer-item">
-                        <a href="https://www.twitch.tv/h1ggsy">
-                            <span id="footer-item" class="fa fa-twitch fa-3x" aria-hidden="true"></span>
+                        <a href="https://twitter.com/H1ggsyx">
+                            <span id="footer-item" class="fa fa-twitter fa-3x" aria-hidden="true"></span>
                         </a>
                         <li class="footer-item">
-                            <a href="https://twitter.com/H1ggsyx">
-                                <span id="footer-item" class="fa fa-twitter fa-3x" aria-hidden="true"></span>
+                            <a href="https://www.facebook.com/HiggsEll">
+                                <span id="footer-item" class="fa fa-facebook fa-3x" aria-hidden="true"></span>
                             </a>
                             <li class="footer-item">
-                                <a href="https://www.facebook.com/HiggsEll">
-                                    <span id="footer-item" class="fa fa-facebook fa-3x" aria-hidden="true"></span>
+                                <a href="https://github.com/EllH/">
+                                    <span id="footer-item" class="fa fa-github fa-3x" aria-hidden="true"></span>
                                 </a>
-                                <li class="footer-item">
-                                    <a href="https://github.com/EllH/">
-                                        <span id="footer-item" class="fa fa-github fa-3x" aria-hidden="true"></span>
-                                    </a>
-                </ul>
-            </footer>
-        </div>
-    </body>
+            </ul>
+        </footer>
+    </div>
+</body>
 
 </html>
