--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <!--Google font api used to be able to use the font Lato-->
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <!--Favicon - http://www.favicon-generator.org-->
-
+	<link rel="shortcut icon" type="image/png" href="/icon.png"/>
+	<link rel="icon" type="image/png" href="/icon.png"/>
     <title>Homepage</title>
 </head>
 
