Fixed Icons not working

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <link rel="stylesheet" href="css/styles.css">
     <!--Google font api used to be able to use the font Lato-->
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <!--Favicon - http://www.favicon-generator.org-->
+    <!--Favicon - http://stackoverflow.com/questions/9943771/adding-a-favicon-to-a-static-html-page-->
 	<link rel="shortcut icon" type="image/png" href="/icon.png"/>
 	<link rel="icon" type="image/png" href="/icon.png"/>
+	<!--Font Awesome Icons - http://fontawesome.io/icons/-->
+	<link rel="stylesheet" href="css/font-awesome.min.css">
     <title>Homepage</title>
 </head>
 
