Homepage Content Added Fixes to Bio, Contact and CV

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <link rel="stylesheet" href="css/styles.css">
-    <!--Google font api used to be able to use the font Lato-->
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <!--Google font api used to be able to use the font Lato and Yanone Kaffeesatz-->
+    <link href="https://fonts.googleapis.com/css?family=Lato|Yanone+Kaffeesatz" rel="stylesheet">
     <!--Favicon - http://stackoverflow.com/questions/9943771/adding-a-favicon-to-a-static-html-page-->
 	<link rel="shortcut icon" type="image/png" href="/icon.png"/>
 	<link rel="icon" type="image/png" href="/icon.png"/>
@@ -43,7 +43,12 @@
     </nav>
     <div class="index-main-container">
         <main class="index-main">
-            <section class="MainTest">Picture will go here soon(tm)</section>
+            <section class="MainImg">
+            <img class="me-picture" src="images/me.jpg" alt="A picture of me">
+            </section>
+            <section class="Index-Main-Text">
+            <h1>Welcome</h1>This was a project that i did for csy1018 in year one at university. <br>This site will show my potential employers more about me as a person and my experience and education history
+            </section>
         </main>
     </div>
     <div class="footer-container">
@@ -51,19 +56,19 @@
             <ul class="footer-list">
                 <li class="footer-item">
                     <a href="https://www.twitch.tv/h1ggsy">
-                        <span id="footer-item" class="fa fa-twitch fa-3x" aria-hidden="true"></span>
+                        <span class="fa fa-twitch fa-3x" aria-hidden="true"></span>
                     </a>
                     <li class="footer-item">
                         <a href="https://twitter.com/H1ggsyx">
-                            <span id="footer-item" class="fa fa-twitter fa-3x" aria-hidden="true"></span>
+                            <span class="fa fa-twitter fa-3x" aria-hidden="true"></span>
                         </a>
                         <li class="footer-item">
                             <a href="https://www.facebook.com/HiggsEll">
-                                <span id="footer-item" class="fa fa-facebook fa-3x" aria-hidden="true"></span>
+                                <span class="fa fa-facebook fa-3x" aria-hidden="true"></span>
                             </a>
                             <li class="footer-item">
                                 <a href="https://github.com/EllH/">
-                                    <span id="footer-item" class="fa fa-github fa-3x" aria-hidden="true"></span>
+                                    <span class="fa fa-github fa-3x" aria-hidden="true"></span>
                                 </a>
             </ul>
         </footer>
