Fixed Form (not being centered)

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <!--Google font api used to be able to use the font Lato and Yanone Kaffeesatz-->
+    <link href="https://fonts.googleapis.com/css?family=Lato|Yanone+Kaffeesatz" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <title>Contact Page</title>
 </head>
