Added CV Page Layout

--- a/cv.html
+++ b/cv.html
@@ -38,7 +38,23 @@
     </nav>
     <div class="cv-main-container">
         <main class="cv-main">
-            <section class="MainTest">Picture will go here soon(tm)</section>
+            <section class="Introduction">
+                <p class="Introduction-Header">Introduction</p>
+                <section class="Indroduction-Text">
+                    Test Introduction
+                </section>
+            </section>
+            <section class="Projects">
+                <p class="Projects-Header">Projects</p>
+                <section class="Projects-Text">
+                    Test Project
+                </section>
+            </section>
+            <section class="Recent-Work">
+                <p class="Recent-Work-Header">Recent-Work</p>
+                <section class="Recent-Work-Text">Test Recent-Work
+                </section>
+            </section>
         </main>
     </div>
     <div class="footer-container">
