Updated Bio and Index Page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <img class="me-picture" src="images/me.jpg" alt="A picture of me">
             </section>
             <section class="Index-Main-Text">
-            <h1>Welcome</h1>This was a project that i did for csy1018 in year one at university. <br>This site will show my potential employers more about me as a person and my experience and education history
+            <h1>Welcome to my Website</h1>
             </section>
         </main>
     </div>
