--- a/cv.html
+++ b/cv.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -41,15 +42,16 @@
             <section class="Introduction">
                 <p class="Introduction-Header">Education</p>
                 <section class="Indroduction-Text">
-                    Shenley Brook End (2008-2013)<br>
-                    Milton Keynes College (2013-2015)<br>
-                    University of Northampton (2016-Current)<br>
+                    Shenley Brook End (2008-2013)
+                    <br> Milton Keynes College (2013-2015)
+                    <br> University of Northampton (2016-Current)
+                    <br>
                 </section>
             </section>
             <section class="Projects">
                 <p class="Projects-Header">Projects</p>
                 <section class="Projects-Text">
-                    Test Project
+                    Will be added once i start some
                 </section>
             </section>
             <section class="Recent-Work">
