--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styles.css">
     <!--Google font api used to be able to use the font Lato and Yanone Kaffeesatz-->
     <link href="https://fonts.googleapis.com/css?family=Lato|Yanone+Kaffeesatz" rel="stylesheet">
     <!--Favicon - http://stackoverflow.com/questions/9943771/adding-a-favicon-to-a-static-html-page-->
-	<link rel="shortcut icon" type="image/png" href="/icon.png"/>
-	<link rel="icon" type="image/png" href="/icon.png"/>
-	<!--Font Awesome Icons - http://fontawesome.io/icons/-->
-	<link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="shortcut icon" type="image/png" href="/icon.png" />
+    <link rel="icon" type="image/png" href="/icon.png" />
+    <!--Font Awesome Icons - http://fontawesome.io/icons/-->
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <title>Homepage</title>
 </head>
 
@@ -44,10 +45,10 @@
     <div class="index-main-container">
         <main class="index-main">
             <section class="MainImg">
-            <img class="me-picture" src="images/me.jpg" alt="A picture of me">
+                <img class="me-picture" src="images/me.jpg" alt="A picture of me">
             </section>
             <section class="Index-Main-Text">
-            <h1>Welcome to my Website</h1>
+                <h1>Welcome to my Website</h1>
             </section>
         </main>
     </div>
