--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="images/icon.ico" />
     <!--Google font api used to be able to use the font Lato and Yanone Kaffeesatz-->
     <link href="https://fonts.googleapis.com/css?family=Lato|Yanone+Kaffeesatz" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome.min.css">
