--- a/cv.html
+++ b/cv.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="icon" href="images/icon.ico" />
     <title>CV</title>
 </head>
 
