--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <!--Google font api used to be able to use the font Lato and Yanone Kaffeesatz-->
     <link href="https://fonts.googleapis.com/css?family=Lato|Yanone+Kaffeesatz" rel="stylesheet">
-    <!--Favicon - http://stackoverflow.com/questions/9943771/adding-a-favicon-to-a-static-html-page-->
-    <link rel="shortcut icon" type="image/png" href="/icon.png" />
-    <link rel="icon" type="image/png" href="/icon.png" />
+    <link rel="icon" href="images/icon.ico" />
     <!--Font Awesome Icons - http://fontawesome.io/icons/-->
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <title>Homepage</title>
