Commented & Updated Google Api link

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="images/icon.ico" />
     <!--Google font api used to be able to use the font Lato and Yanone Kaffeesatz-->
-    <link href="https://fonts.googleapis.com/css?family=Lato|Yanone+Kaffeesatz" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato%7CYanone+Kaffeesatz" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <title>Contact Page</title>
 </head>
@@ -45,7 +45,7 @@
                 <form id="contact-form" method="post" accept-charset="utf-8">
                     <h4 class="contact-me-text">Contact Me</h4>
                     <fieldset>
-                        <input placeholder="Your Email Address" type="text" required maxlength="32">
+                        <input placeholder="Your Email Address" type="email" required>
                     </fieldset>
                     <fieldset>
                         <textarea placeholder="Type Your Message Here" required></textarea>
