--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styles.css">
     <!--Google font api used to be able to use the font Lato and Yanone Kaffeesatz-->
-    <link href="https://fonts.googleapis.com/css?family=Lato|Yanone+Kaffeesatz" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato%7CYanone+Kaffeesatz" rel="stylesheet">
     <link rel="icon" href="images/icon.ico" />
     <!--Font Awesome Icons - http://fontawesome.io/icons/-->
     <link rel="stylesheet" href="css/font-awesome.min.css">
