--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,11 @@
 </head>
 
 <body>
+    <!--Header-->
     <header class="main-header">
         Elliot Higgs
     </header>
+    <!--Navigation Bar-->
     <nav class="menu">
         <ul class="nav">
             <li class="index-link">
@@ -39,6 +41,7 @@
             </li>
         </ul>
     </nav>
+    <!--Content Area-->
     <div class="contact-main-container">
         <main class="contact-main">
             <div class="form-container">
@@ -57,6 +60,7 @@
             </div>
         </main>
     </div>
+    <!--Footer-->
     <div class="footer-container">
         <footer class="footer-content">
             <ul class="footer-list">
