--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 </head>
 
 <body>
+    <!--Header-->
     <header class="main-header">
         Elliot Higgs
     </header>
+    <!--Navigation Bar-->
     <nav class="menu">
         <ul class="nav">
             <li class="index-link">
@@ -40,6 +42,7 @@
             </li>
         </ul>
     </nav>
+    <!--Content Area-->
     <div class="index-main-container">
         <main class="index-main">
             <section class="MainImg">
@@ -50,6 +53,7 @@
             </section>
         </main>
     </div>
+    <!--Footer-->
     <div class="footer-container">
         <footer class="footer-content">
             <ul class="footer-list">
