--- a/cv.html
+++ b/cv.html
@@ -11,9 +11,11 @@
 </head>
 
 <body>
+    <!--Header-->
     <header class="main-header">
         Elliot Higgs
     </header>
+    <!--Navigation Bar-->
     <nav class="menu">
         <ul class="nav">
             <li class="index-link">
@@ -38,6 +40,7 @@
             </li>
         </ul>
     </nav>
+    <!--Content Area-->
     <div class="cv-main-container">
         <main class="cv-main">
             <section class="Introduction">
@@ -62,6 +65,7 @@
             </section>
         </main>
     </div>
+    <!--Footer-->
     <div class="footer-container">
         <footer class="footer-content">
             <ul class="footer-list">
